static/themes/dark/theme.css
/* Please use this CSS theme as a template for Kiwi Themes.

   Each Component has been given a title matching it's Filename, to make themeing easier.

 */

.kiwi-wrap {
    background: #201F1F;
    color: #dedede;
    --kiwi-nick-brightness: 40;
    --kiwi-supports-monospace: 1;
}

 /* Welcome Screen ( Welcome.vue ) */
 .kiwi-welcome-simple-form {
     background-color: #ffffff;
     color: #000;
     border: 1px solid #ececec;
 }

 .kiwi-welcome-simple-form .input-text {
     background: #fff;
 }

 .kiwi-welcome-simple-error {
     border: 1px dashed #d86f6f;
 }

 .kiwi-welcome-simple-form .u-submit {
     background-color: #42b992;
     color: #dedede;
 }

 .kiwi-welcome-simple .help {
     color: #666;
 }

 .kiwi-welcome-simple .help a {
     color: #666;
 }

 .kiwi-welcome-simple .help a:hover {
     color: #a9d87a;
 }


/* App ( App.vue ) */
.kiwi-workspace {
    background: none;
}

.kiwi-workspace::before {
    background: #42b992;
}

.kiwi-workspace::after{
    background-color: rgba(255, 255, 255, 0.4);
}

.u-tabbed-content {
    background-color: #1e1e1e;
}

.u-tabbed-view-tabs {
    background: rgb(105, 105, 105);
    border-bottom: 3px solid rgba(255, 255, 255, 0.1);
}

.u-tabbed-view-tabs .u-tabbed-view-tab {
    border-bottom: 3px solid rgba(255, 255, 255, 0.1);
    background: #2c2c2c;
    color: #dedede;
}

.u-tabbed-view-tabs .u-tabbed-view-tab:hover,
.u-tabbed-view-tabs .u-tabbed-view-tab.u-tabbed-view-tab--active{
    border-bottom: 3px solid #42b992;
}

/*Style all inputs */
.input-text {
    background: #dedede;
}

.input-text-label {
    color: gray;
}

.input-text--focus {
    border-color: #42b992;
}

.input-text-underline {
    border-color: #a9a9a9;
}

.input-text-underline-active {
    background: #42b992;
}

.u-form .u-input,
.u-form textarea {
    border: 1px solid #ccc;
    border-bottom: 2px solid #42b992;
    background: #dadada;
    line-height: normal;
    outline-color: #42b992;
}

.u-form span {
    display: inline-block;
    line-height: 25px;
    width: auto;
    font-weight: 500;
    font-size: 1em;
    text-align: left;
    max-width: none;
}

.u-form input[type='checkbox'] {
    border: 2px solid #000;
    background-color: #ffffff;
}

.u-form input[type='checkbox']:after {
    background: #42b992;
}

.u-form input[type='checkbox']:after {
    background: #42b992;
}

.u-form label input[type='text'],
.u-form label input[type='password'],
.u-form label input[type='email'],
.u-form textarea {
    color: #000;
    background: #dedede;
    border: 1px solid #42b992;
}

/*buttons */
.u-button {
    color: #2c3e50;
    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.1);
}

.u-link {
    color: #42b992;
}

.u-button-primary {
    background-color: #42b992;
    border: none;
    border-bottom: 1px solid #42b992;
    color: #dedede;
}

.u-button-secondary {
    background: rgba(117, 117, 117, 0.07);
    border-bottom: 1px solid rgba(117, 117, 117, 0.2);
}

.u-button-warning {
    background-color: #ca3c3c;
    border-bottom: 1px solid #5f1515;
    color: #dedede4f4;
}


/* Application settings ( AppSettings.vue ) */
.kiwi-appsettings {
    background: #1e1e1e;
}

.kiwi-appsettings-block {
    background-color: #272626;
    border: 1px solid rgba(0, 0, 0, 0.2);
}

.kiwi-appsettings-block h3 {
    background: #42b992;
    color: #dedede;
}

.kiwi-appsettings .u-form label span {
    color: #dedede;
}

.kiwi-appsettings-title {
    background-color: #42b992;
    color: #dedede;
}

.kiwi-appsettings-title:hover{
    background: #d16c6c;
}

/* AutoComplete - Shows when typging with a command (AutoComplete.vue) */
.kiwi-autocomplete {
    box-shadow: 0 1px 15px rgba(64, 54, 63, 0.25);
    border: 1px solid #ccc;
    background: #201F1F;
    color: #fff;
}

.kiwi-autocomplete-item {
    border-bottom: 1px solid #666;
}

.kiwi-autocomplete-item--selected {
    background: #515151;
}

/* Channel Banlist ( Channelbanlist.vue ) */
.kiwi-channelbanlist-table tr {
    border-bottom: 1px solid #ddd;
}

/* Channel List ( ChannelList.vue ) */
.kiwi-channellist table tbody tr:nth-child(even) {
    background-color: #262626;
}

.kiwi-channellist table tbody tr {
    border-top: 1px solid lightgray;
}

.kiwi-channellist-users {
    background: #42b992;
}

/* Container - Main ( Container.vue ) */
.kiwi-container {
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}

.kiwi-header-join-channel-button {
    background-color: #42b983;
    color: #dedede;
}

.kiwi-container-toggledraw-statebrowser,
.kiwi-container-toggledraw-sidebar {
    background: #1e1e1e;
}

.kiwi-container-toggledraw-statebrowser {
    border-right: 1px solid #ddd;
}

.kiwi-container-toggledraw-sidebar {
    border-left: 1px solid #ddd;
}

.kiwi-container-toggledraw-sidebar--disabled {
    color: #b8babd;
}

.kiwi-container-toggledraw-statebrowser-messagecount {
    background-color: #42b983;
    color: #fff;
}

.kiwi-container-toggledraw-statebrowser-messagecount::after {
    border: 0.6em solid transparent;
    border-right-color: #ddd;
}

/* Sidebar uservue colouring */
.kiwi-userbox,
.kiwi-userbox-usermask {
    color: #dedede;
}

.kiwi-userbox .kiwi-userbox-actions {
    color: #dedede;
}

.kiwi-userbox .kiwi-userbox-actions .u-button {
    border-color: #dedede;
    color: #dedede;
    transition: all 0.3s;
}

.kiwi-userbox .kiwi-userbox-actions .u-button:hover {
    color: #dedede;
}

.u-form.kiwi-ignore-user-form {
    color: #dedede;
}

/* Container Header ( ContainerHeader.vue ) */
.kiwi-header {
    background: #1e1e1e;
    color: #dedede;
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}

.kiwi-header-topic {
    border-top: 2px solid #42b992;
    border-bottom: 1px solid #42b992;
    color: #dedede;
}

.kiwi-header-buffersettings {
    border-top: 1px solid #ddd;
}

.kiwi-header-topic > div {
    color: #dedede;
}

.kiwi-header-name {
    color: #dedede;
}

.kiwi-header-buffersettings {
    border-top: 1px solid #ddd;
}
/* ... */

